@@ -13,6 +13,7 @@ export(exampleExpressionSet)
 export(exampleGeneSetDb)
 export(exampleGeneSets)
 export(geneSetDb)
+export(geneSetStats)
 export(geneSets)
 export(getMSigDBset)
 export(hasGeneSet)
@@ -28,7 +29,6 @@ export(result)
 export(resultNames)
 export(results)
 export(scoreSingleSamples)
-export(selectedByHyperG)
 export(tabulateResults)
 export(validateInputs)
 export(ztransformPvalues)
